@@ -1,3 +1,11 @@
+2017-12-03  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Remove a webkitgtk workaround
+
+	* src/main.c (main): do not set the
+	WEBKIT_DISABLE_COMPOSITING_MODE environment variable to "1"--it
+	doesn't seem to be needed any more.
+
 2017-12-03  Albrecht Dreß <albrecht.dress@arcor.de>
 
 	Fix documentation
